# ECS-project

./: CMakeLists.txt
include/: BounceSystem.hpp  CollisionSystem.hpp  ComponentStorage.hpp  EntitySpawner.hpp  MovementSystem.hpp  PositionStorage.hpp  RenderSystem.hpp
src/: BounceSystem.cpp  CollisionSystem.cpp  EntitySpawner.cpp  MovementSystem.cpp  PositionStorage.cpp  RenderSystem.cpp  main.cpp
